--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.23",
+    "@types/nanoid": "^2.1.0",
     "@types/node": "12.12.11",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "nanoid": "^2.1.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
