--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "nanoid": "^2.1.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-fetch-hook": "^1.7.1",
     "react-scripts": "3.2.0",
     "typescript": "3.7.2"
   },
