--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ENV=dev ts-node ./src/index.ts",
-    "dev:watch": "ENV=dev ts-node-dev --respawn src/index.ts",
+    "dev": "cross-env ENV=dev ts-node ./src/index.ts",
+    "dev:watch": "cross-env ENV=dev ts-node-dev --respawn src/index.ts",
     "clean": "rimraf dist/*",
     "tsc": "tsc",
     "build": "npm-run-all clean tsc",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/node": "^12.12.7",
+    "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
