--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.0",
     "@eslint/eslintrc": "^3",
+    "@mui/icons-material": "^7.1.0",
     "@storybook/addon-a11y": "^9.0.1",
     "@storybook/addon-docs": "^9.0.1",
     "@storybook/addon-onboarding": "^9.0.1",
@@ -32,6 +33,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "eslint-plugin-storybook": "^9.0.1",
+    "nanoid": "^5.1.5",
     "playwright": "^1.52.0",
     "storybook": "^9.0.1",
     "tailwindcss": "^4",
