Use tailwind instead of css

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nanoid": "^5.1.5",
     "playwright": "^1.52.0",
     "storybook": "^9.0.1",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.1.4"
