--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@storybook/addon-a11y": "^9.0.1",
     "@storybook/addon-docs": "^9.0.1",
     "@storybook/addon-onboarding": "^9.0.1",
+    "@storybook/addon-styling-webpack": "^1.0.1",
     "@storybook/addon-vitest": "^9.0.1",
     "@storybook/nextjs-vite": "^9.0.1",
     "@tailwindcss/postcss": "^4",
