--- a/package.json
+++ b/package.json
@@ -18,29 +18,31 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@eslint/eslintrc": "^3",
     "@mui/icons-material": "^7.1.0",
-    "@storybook/addon-a11y": "^9.0.1",
-    "@storybook/addon-docs": "^9.0.1",
-    "@storybook/addon-onboarding": "^9.0.1",
-    "@storybook/addon-styling-webpack": "^1.0.1",
-    "@storybook/addon-vitest": "^9.0.1",
-    "@storybook/nextjs-vite": "^9.0.1",
+    "@storybook/addon-a11y": "^9.0.4",
+    "@storybook/addon-docs": "^9.0.4",
+    "@storybook/addon-onboarding": "^9.0.4",
+    "@storybook/addon-styling-webpack": "^2.0.0",
+    "@storybook/addon-vitest": "^9.0.4",
+    "@storybook/nextjs-vite": "^9.0.4",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^22.15.29",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@vitest/browser": "^3.1.4",
-    "@vitest/coverage-v8": "^3.1.4",
+    "@vitest/browser": "^3.2.1",
+    "@vitest/coverage-v8": "^3.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "eslint-plugin-storybook": "^9.0.1",
+    "eslint-plugin-storybook": "^9.0.4",
     "nanoid": "^5.1.5",
     "playwright": "^1.52.0",
     "storybook": "^9.0.1",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vitest": "^3.1.4"
+    "vitest": "^3.2.1"
   }
 }
