--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "next": "15.3.3",
+    "next": "15.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -29,18 +29,19 @@
     "@storybook/addon-vitest": "^9.0.4",
     "@storybook/nextjs-vite": "^9.0.4",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^22.15.29",
+    "@types/node": "^22.17.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.2.1",
     "@vitest/coverage-v8": "^3.2.1",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "15.4.6",
     "eslint-plugin-storybook": "^9.0.4",
     "nanoid": "^5.1.5",
     "playwright": "^1.52.0",
     "storybook": "^9.0.1",
-    "tailwind-variants": "^1.0.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^2.1.0",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.1"
