--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nanoid": "^5.1.5",
     "playwright": "^1.52.0",
     "storybook": "^9.0.1",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^2.1.0",
     "tailwindcss": "^4",
