--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,22 +13,21 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
-        node-version: '20.x'
-    - name: Cache npm dependencies
+        node-version: '22.x'
+    - name: Cache npm cache
       uses: actions/cache@v4
       with:
-        path: node_modules
+        path: ~/.npm
         key: npm-${{ hashFiles('package-lock.json') }}
-    - name: Cache Playwright browsers
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/ms-playwright
-        key: playwright-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
         restore-keys: |
-          playwright-${{ runner.os }}-
-    - name: Run test
-      working-directory: .
-      run: |
-        npm install
-        npx playwright install
-        CI=true npm test
+          npm-
+    - name: Install dependencies
+      run: npm install
+    - name: Install Playwright Browsers
+      run: npx playwright install
+    - name: Install Playwright Dependencies
+      run: npx playwright install-deps
+    - name: Build
+      run: npm run build
+    - name: Test
+      run: npm run test
